# browser-eye-navigation

./: .gitignore  README.md  calibration.py  data_collection.py  gaze_core.py  model.py  pyproject.toml  reset_calibration  run_codex_tab_log_tuning.sh  tab_calibration.py  tab_model.py  tab_test.py  tab_tracker.py  test.py  tracker.py  train  train_tab
calibration_logs/: tab_calibration_20260303_172719.json  tab_calibration_20260303_181103.json
calibration_logs/train_runs/: train_run_20260303_180232.md
chromium_tab_overlay_extension/: background.js  manifest.json
chromium_tab_switch_extension/: background.js  manifest.json
src/: data_collection.py  gaze_core.py  run_model.py  train.py
tab_click_logger_extension/: background.js  manifest.json
tab_runtime_control_extension/: background.js  manifest.json  offscreen.html  offscreen.js  runtime_hotkey.js
